--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
+        "laradumps/laradumps": "^3.5",
         "laravel/pail": "^1.1",
         "laravel/pint": "^1.18",
         "laravel/sail": "^1.26",
